fix gap

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -149,7 +149,3 @@ ul {
     scroll-margin-top: 9rem;
   }
 }
-
-.internal-link-button {
-  gap: var(--amplify-space-small);
-}
